# genclass

./: .gitignore  CMakeLists.txt
include/: ClassGenerator.hpp  ExtendInclude.hpp  Object.hpp  Shell.hpp  Variable.hpp
src/: ClassGenerator.cpp  Object.cpp  Shell.cpp  Variable.cpp  main.cpp
